Remove loader and add button